Bug 350460 - Album and artist metadata not visible when using large font size
Summary: Album and artist metadata not visible when using large font size
Status: RESOLVED FIXED
Alias: None
Product: juk
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Michael Pyne
URL:
Keywords: accessibility
Depends on:
Blocks:
 
Reported: 2015-07-21 18:47 UTC by Karl Ove Hufthammer
Modified: 2016-04-26 01:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.04.1
Sentry Crash Report:


Attachments
Screenshot showing the cropped text (37.30 KB, image/png)
2015-07-21 18:48 UTC, Karl Ove Hufthammer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Karl Ove Hufthammer 2015-07-21 18:47:53 UTC
The text area showing the album and artist is not scaled to the height of the text. When KDE is configured to use a somewhat large font size for UI elements, the text is cropped, and only partially visible.

Reproducible: Always

Steps to Reproduce:
1. Change the font for ‘General’ elements in the KDE System Settings to ‘Oxygen-Sans 20’
2. Start Juk
3. Select a song

Actual Results:  
The text showing the artist and album metadata is cut off (only partially shown).

Expected Results:  
All the text (or at least the *first line* of the text) should be shown.
Comment 1 Karl Ove Hufthammer 2015-07-21 18:48:56 UTC
Created attachment 93682 [details]
Screenshot showing the cropped text
Comment 2 Michael Pyne 2016-04-24 23:49:41 UTC
Well it took until I got a HiDPI monitor but I can definitely confirm...
Comment 3 Michael Pyne 2016-04-26 01:01:32 UTC
Git commit f3606f835773627036e5e9e0513f2e3cecdb4f52 by Michael Pyne.
Committed on 26/04/2016 at 00:58.
Pushed by mpyne into branch 'Applications/16.04'.

Ensure Now Playing bar shows text even with hiDPI/big fonts.

Note the fix only applies to KDE4-based desktops as JuK is still not
ported to KF5.
GUI:
FIXED-IN:16.04.1

M  +1    -1    main.cpp
M  +24   -16   nowplaying.cpp
M  +1    -1    nowplaying.h

http://commits.kde.org/juk/f3606f835773627036e5e9e0513f2e3cecdb4f52