Ensure Now Playing bar shows text even with hiDPI/big fonts.

Note the fix only applies to KDE4-based desktops as JuK is still not
ported to KF5.

BUG:350460
GUI:
FIXED-IN:16.04.1